--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </li>
         <br>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-          <button class="btn btn-outline-light " type="button">Register</button>
+          <button class="btn btn-outline-light " type="button"> <a target="_blank" href="https://www.tickettailor.com/events/nodebrew/1036327">Register</a></button>
         </div>
       </ul>
     </div>
@@ -41,7 +41,7 @@
           <h5 style="margin-top: 50px;">Making tech inclusive and accessible.</h5>
           <h1 style="margin-top: 10px;">{ Hack Brew }</h1>
           <h5 style="margin-top: 20px;">2-4 Februrary, 2024</h5>
-          <button style="margin-top: 30px;padding: 10px;" class="btn btn-outline-light" type="button">Register</button>
+          <button style="margin-top: 30px;padding: 10px;" class="btn btn-outline-light" type="button"><a target="_blank" href="https://www.tickettailor.com/events/nodebrew/1036327">Register</a></button>
         </div>
         <div class="col">
          <img src="header.png" alt="" width="400" height="400">
@@ -107,41 +107,79 @@
 <div class="themes reveal fade-bottom">
   <h1 style="text-align: center;">{ Fueling Innovation and Creativity }</h1>
   <h6 style="text-align: center;">Foster innovation, solve real-world problems, and spark collaboration with our <br> diverse hackathon theme repository.</h6>
-  <br> <br>
+  <br> <br> <!---
+  <div class="row">
+    <div class="col" style="margin-left: 180px;">
+      <div id="list-example" class="list-group">
+        <a class="list-group-item list-group-item-action" href="#list-item-1">Item 1</a>
+        <a class="list-group-item list-group-item-action" href="#list-item-2">Item 2</a>
+        <a class="list-group-item list-group-item-action" href="#list-item-3">Item 3</a>
+        <a class="list-group-item list-group-item-action" href="#list-item-4">Item 4</a>
+      </div>
+    </div>
+    <div class="col" style="margin-right: 180px;">
+      <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-offset="0" class="scrollspy-example" tabindex="0">
+        <h4 id="list-item-1">Item 1</h4>
+        <p>
+          This is some placeholder content for the scrollspy page. Note that as you scroll down the page, the appropriate navigation link is highlighted. It's repeated throughout the component example. We keep adding some more example copy here to emphasize the scrolling and highlighting.
+        </p>
+        <h4 id="list-item-2">Item 2</h4>
+        <p>
+          This is some placeholder content for the scrollspy page. Note that as you scroll down the page, the appropriate navigation link is highlighted. It's repeated throughout the component example. We keep adding some more example copy here to emphasize the scrolling and highlighting.
+        </p>
+        <h4 id="list-item-3">Item 3</h4>
+        <p>
+          This is some placeholder content for the scrollspy page. Note that as you scroll down the page, the appropriate navigation link is highlighted. It's repeated throughout the component example. We keep adding some more example copy here to emphasize the scrolling and highlighting.
+        </p>
+        <h4 id="list-item-4">Item 4</h4>
+        <p>
+          This is some placeholder content for the scrollspy page. Note that as you scroll down the page, the appropriate navigation link is highlighted. It's repeated throughout the component example. We keep adding some more example copy here to emphasize the scrolling and highlighting.
+        </p>
+      </div>
+    </div>
+    
+  </div>
+  
+-->
 <div class="row row-cols-1 row-cols-md-2 g-4" style="margin-left: 180px;">
-  <div class="col">
-    <div class="card border-dark mb-3" style="max-width: 18rem;">
+  <div class="col-6">
+    <div class="card h-100 border-dark mb-3" style="max-width: 25rem;">
       <div class="card-header">Brew Theme #1</div>
       <div class="card-body">
         <h5 class="card-title">Social Enterprise</h5>
         <p class="card-text">Discover themes that harness the power of business for social good, merging profit with positive impact</p>
+        <button type="button" class="btn btn-secondary">Read More -></button>
+
       </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card border-dark mb-3" style="max-width: 18rem;">
+  <div class="col-6">
+    <div class="card h-100 border-dark mb-3" style="max-width: 25rem;">
       <div class="card-header">Brew Theme #2</div>
       <div class="card-body">
         <h5 class="card-title">Sustainability</h5>
         <p class="card-text">Explore eco-conscious themes, driving innovation to solve environmental challenges and promote sustainable solutions.</p>
+        <button type="button" class="btn btn-secondary">Read More -></button>
       </div>
     </div>
   </div>
   <div class="col">
-    <div class="card border-dark mb-3" style="max-width: 18rem;">
+    <div class="card h-100 border-dark mb-3" style="max-width: 25rem;">
       <div class="card-header">Brew Theme #3</div>
       <div class="card-body">
         <h5 class="card-title">Accessibility and Inclusion</h5>
         <p class="card-text">Championing technology that breaks barriers and fosters a world where everyone, regardless of ability or background, can participate fully and equally.</p>
+        <button type="button" class="btn btn-secondary">Read More -></button>
       </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card border-dark mb-3" style="max-width: 18rem;">
+  <div class="col-6">
+    <div class="card h-100 border-dark mb-3" style="max-width: 25rem;">
       <div class="card-header">Brew Theme #4</div>
       <div class="card-body">
         <h5 class="card-title">Open Innovation with AI/ML</h5>
         <p class="card-text">Delve into AI and Machine Learning themes, fostering collaborative, data-driven advancements in the world of technology and innovation.</p>
+        <button type="button" class="btn btn-secondary">Read More -></button>
       </div>
     </div>
   </div>
@@ -290,7 +328,7 @@
     <div class="bottomBox">
     <div class="container">
       <div class="row">
-        <div class="col-sm">
+        <div class="col-sm" style="margin-left: 50px;">
           <h1>
             Empowering Diversity
           </h1>
@@ -298,10 +336,10 @@
             One hackathon, at a time
           </h5>
           <br>
-          <button class="btn btn-outline-light " type="button">Register</button>
+          <button class="btn btn-outline-light " type="button"><a target="_blank" href="https://www.tickettailor.com/events/nodebrew/1036327">Register</a></button>
         </div>
         <div class="col-sm">
-          <div class="bottomImg swing">
+          <div class="bottomImg bounce-in">
             <img src="cover.png" alt="">
           </div>
         </div>
@@ -331,16 +369,16 @@
   
           <ul class="list-unstyled mb-0">
             <li>
-              <a href="https://hackbrew2024-codeofconduct.tiiny.site" class="text-white">Code of Conduct</a>
+              <a target="_blank" href="https://hackbrew2024-codeofconduct.tiiny.site" class="text-white">Code of Conduct</a>
             </li>
             <li>
-              <a href="mailto:anjali@nodebrew.tech" class="text-white">Privacy Policy</a>
+              <a target="_blank" href="mailto:anjali@nodebrew.tech" class="text-white">Privacy Policy</a>
             </li>
             <li>
-              <a href="mailto:anjali@nodebrew.tech" class="text-white">Verification Letter</a>
+              <a target="_blank" href="mailto:anjali@nodebrew.tech" class="text-white">Verification Letter</a>
             </li>
             <li>
-              <a href="mailto:hello@nodebrew.tech" class="text-white">Contact Us</a>
+              <a target="_blank" href="mailto:hello@nodebrew.tech" class="text-white">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -351,16 +389,16 @@
   
           <ul class="list-unstyled mb-0">
             <li>
-              <a href="wwww.instagrm.com/nodebreww" class="text-white">Instagram</a>
+              <a target="_blank" href="wwww.instagrm.com/nodebreww" class="text-white">Instagram</a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/company/nodebrew/" class="text-white">LinkedIn</a>
+              <a target="_blank" href="https://www.linkedin.com/company/nodebrew/" class="text-white">LinkedIn</a>
             </li>
             <li>
-              <a href="https://github.com/nodebreww" class="text-white">GitHub</a>
+              <a target="_blank" href="https://github.com/nodebreww" class="text-white">GitHub</a>
             </li>
             <li>
-              <a href="https://wellfound.com/company/nodebrew" class="text-white">WellFound</a>
+              <a target="_blank" href="https://wellfound.com/company/nodebrew" class="text-white">WellFound</a>
             </li>
           </ul>
         </div>
@@ -457,10 +495,10 @@ let counts = setInterval(updated);
   }
 
   // Usage
-  animateCounter('counter1', 1600, 2000); // Counter 1 from 0 to 100 in 2000 milliseconds
-  animateCounter('counter2', 46, 2000); // Counter 2 from 0 to 500 in 1500 milliseconds
-  animateCounter('counter3', 19, 2000); // Counter 3 from 0 to 1000 in 2500 milliseconds
-  animateCounter('counter4', 70000, 2000);
+  animateCounter('counter1', 1600, 9000); // Counter 1 from 0 to 100 in 2000 milliseconds
+  animateCounter('counter2', 46, 9000); // Counter 2 from 0 to 500 in 1500 milliseconds
+  animateCounter('counter3', 19, 9000); // Counter 3 from 0 to 1000 in 2500 milliseconds
+  animateCounter('counter4', 70000, 9000);
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
