--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <h5 style="margin-top: 20px;">2-4 Februrary, 2024</h5>
           <button style="margin-top: 30px;padding: 10px;" class="btn btn-outline-light" type="button"><a target="_blank" href="https://www.tickettailor.com/events/nodebrew/1036327">Register</a></button>
         </div>
-        <div class="col">
+        <div class="col headerimg">
          <img src="header.png" alt="" width="400" height="400">
        </div>
      </div>
@@ -142,7 +142,7 @@
   
 -->
 <div class="row row-cols-1 row-cols-md-2 g-4" style="margin-left: 180px;">
-  <div class="col-6">
+  <div class="col">
     <div class="card h-100 border-dark mb-3" style="max-width: 25rem;">
       <div class="card-header">Brew Theme #1</div>
       <div class="card-body">
@@ -153,7 +153,7 @@
       </div>
     </div>
   </div>
-  <div class="col-6">
+  <div class="col">
     <div class="card h-100 border-dark mb-3" style="max-width: 25rem;">
       <div class="card-header">Brew Theme #2</div>
       <div class="card-body">
@@ -173,7 +173,7 @@
       </div>
     </div>
   </div>
-  <div class="col-6">
+  <div class="col">
     <div class="card h-100 border-dark mb-3" style="max-width: 25rem;">
       <div class="card-header">Brew Theme #4</div>
       <div class="card-body">
@@ -190,8 +190,8 @@
 <div class="faq reveal fade-bottom" id="faq">
   <h1 style="text-align: center;">{ Frequently Asked Questions }</h1> <br>
   <div class="container">
-    <div class="row">
-      <div class="col">
+    <div class="row row-cols-1 row-cols-md-2 g-2">
+      <div class="col h-100">
         <div class="accordion" id="accordionPanelsStayOpenExample">
           <div class="accordion-item">
             <h2 class="accordion-header">
@@ -328,7 +328,7 @@
     <div class="bottomBox">
     <div class="container">
       <div class="row">
-        <div class="col-sm" style="margin-left: 50px;">
+        <div class="col-sm emp">
           <h1>
             Empowering Diversity
           </h1>
