--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   </div>
   
 -->
-<div class="row row-cols-1 row-cols-md-2 g-4" style="margin-left: 180px;">
+<div class="row row-cols-1 row-cols-md-2 g-4" style="margin-left: 150px;">
   <div class="col">
     <div class="card h-100 border-dark mb-3" style="max-width: 25rem;">
       <div class="card-header">Brew Theme #1</div>
@@ -190,8 +190,8 @@
 <div class="faq reveal fade-bottom" id="faq">
   <h1 style="text-align: center;">{ Frequently Asked Questions }</h1> <br>
   <div class="container">
-    <div class="row row-cols-1 row-cols-md-2 g-2">
-      <div class="col h-100">
+    <div class="row">
+      <div class="col">
         <div class="accordion" id="accordionPanelsStayOpenExample">
           <div class="accordion-item">
             <h2 class="accordion-header">
@@ -255,7 +255,7 @@
     </div>
       </div>
     </div>
-    <div class="col">
+    <div class="col h-100">
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
