--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     </div>
       </div>
     </div>
-    <div class="col h-100">
+    <div class="col">
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
