--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 </div>
 </div>
 </div>
+
 <div class="spacer"></div>
 <div class="faq reveal fade-bottom" id="faq">
   <h1 style="text-align: center;">{ Frequently Asked Questions }</h1> <br>
@@ -389,7 +390,7 @@
   
           <ul class="list-unstyled mb-0">
             <li>
-              <a target="_blank" href="wwww.instagrm.com/nodebreww" class="text-white">Instagram</a>
+              <a target="_blank" href="https://www.instagram.com/nodebreww" class="text-white">Instagram</a>
             </li>
             <li>
               <a target="_blank" href="https://www.linkedin.com/company/nodebrew/" class="text-white">LinkedIn</a>
