--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <title>Hack Brew</title>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,
+     user-scalable=no">
+
     <link rel="apple-touch-icon" sizes="180x180" href="favicon.ico">
 <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
@@ -189,7 +193,7 @@
 
 <div class="spacer"></div>
 <div class="faq reveal fade-bottom" id="faq">
-  <h1 style="text-align: center;">{ Frequently Asked Questions }</h1> <br>
+  <h1 style="text-align: center ; font-size: 31px;">{ Frequently Asked Questions }</h1> <br>
   <div class="container">
     <div class="row">
       <div class="col">
