added css media queries for phone

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
   </div>
   
 -->
-<div class="row row-cols-1 row-cols-md-2 g-4" style="margin-left: 150px;">
+<div class="row row-cols-1 row-cols-md-2 g-4" style="margin-left: 150px;
+ margin-right:150px;
+ ">
   <div class="col">
     <div class="card h-100 border-dark mb-3" style="max-width: 25rem;">
       <div class="card-header">Brew Theme #1</div>
