--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   
 -->
 <div class="row row-cols-1 row-cols-md-2 g-4" style="margin-left: 150px;">
-  <div class="col">
+  <div class="col-xs-12 col-sm-12 col-md-6">
     <div class="card h-100 border-dark mb-3" style="max-width: 25rem;">
       <div class="card-header">Brew Theme #1</div>
       <div class="card-body">
@@ -153,7 +153,7 @@
       </div>
     </div>
   </div>
-  <div class="col">
+  <div class="col-xs-12 col-sm-12 col-md-6">
     <div class="card h-100 border-dark mb-3" style="max-width: 25rem;">
       <div class="card-header">Brew Theme #2</div>
       <div class="card-body">
@@ -163,7 +163,7 @@
       </div>
     </div>
   </div>
-  <div class="col">
+  <div class="col-xs-12 col-sm-12 col-md-6">
     <div class="card h-100 border-dark mb-3" style="max-width: 25rem;">
       <div class="card-header">Brew Theme #3</div>
       <div class="card-body">
@@ -173,7 +173,7 @@
       </div>
     </div>
   </div>
-  <div class="col">
+  <div class="col-xs-12 col-sm-12 col-md-6">
     <div class="card h-100 border-dark mb-3" style="max-width: 25rem;">
       <div class="card-header">Brew Theme #4</div>
       <div class="card-body">
@@ -366,7 +366,7 @@
         <!--Grid column-->
   
         <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <div class="col-lg-3 col-xs-6 col-md-4   mb-4 mb-md-0">
   
           <ul class="list-unstyled mb-0">
             <li>
@@ -386,7 +386,7 @@
         <!--Grid column-->
   
         <!--Grid column-->
-        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <div class="col-lg-3 col-xs-6 col-md-4   mb-4 mb-md-0">
   
           <ul class="list-unstyled mb-0">
             <li>
@@ -484,6 +484,7 @@ let counts = setInterval(updated);
     function updateCounter() {
       startValue += increment;
       counterElement.textContent = Math.round(startValue);
+      
 
       if (startValue < targetValue) {
         requestAnimationFrame(updateCounter);
