--- a/index.html
+++ b/index.html
@@ -352,25 +352,16 @@
               <div class="sponsor-feature"><img alt="" src="sponsor/echo3d.png" style="width: 200px;" /></div>
             </div>
           </div>
-        </div> <!--
+        </div> 
         <div class="item">
           <div class="row">
             <div class="col-sm-3 col-xs-6">
-              <div class="sponsor-feature"><img alt="" src="https://itagroup.hs.llnwd.net/o40/csg/pse-demo/channel-incentive/logos/logo1.jpg" style="width: 160px;" /></div>
-            </div>
-            <div class="col-sm-3 col-xs-6">
-              <div class="sponsor-feature"><img alt="" src="https://itagroup.hs.llnwd.net/o40/csg/pse-demo/channel-incentive/logos/logo2.jpg" style="width: 160px;" /></div>
-            </div>
-            <div class="col-sm-3 col-xs-6">
-              <div class="sponsor-feature"><img alt="" src="https://itagroup.hs.llnwd.net/o40/csg/pse-demo/channel-incentive/logos/logo3.jpg" style="width: 160px;" /></div>
-            </div>
-            <div class="col-sm-3 col-xs-6">
-              <div class="sponsor-feature"><img alt="" src="https://itagroup.hs.llnwd.net/o40/csg/pse-demo/channel-incentive/logos/logo4.jpg" style="width: 160px;" /></div>
+              <div class="sponsor-feature"><img alt="" src="sponsor/wolfram.png" style="width: 190px;" /></div>
             </div>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
     </div>
     </div>
     </div>
